--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
         <title>Odin Recipes</title>
-</head>
+        <link rel="stylesheet" href="index.css">
 <body>
     <h1>Odin Recipes</h1>
+
 <ul>
 
   <li> <a href="recipes/lasagna.html">Lasagna</a></li>
